--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="mobile_nav_item mobile_nav_about">
                 ABOUT
                 <div class="mobile_nav_item_sub mobile_sub1">
-                    <div><a href="#">언어정보학과</a></div>
+                    <div><a href="pnu_linguistics/index.html">언어정보학과</a></div>
                     <div><a href="#">언어정보학과 학생회</a></div>
                 </div>
             </div>
@@ -208,7 +208,7 @@
             <h2>궁금한 점들에 대한 해결을 주저말아 주세요 :)</h2>
             <div class="contact_icons">
                 <div class="contact_icon kt">
-                    <a href="https://pf.kakao.com/_xbxlXxcxl">
+                    <a href="https://pf.kakao.com/_xbxlXxcxl"; target="_blank">
                         <div>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path d="M12 1c-6.338 0-12 4.226-12 10.007 0 2.05.739 4.063 2.047 5.625.055 1.83-1.023 4.456-1.993 6.368 2.602-.47 6.301-1.508 7.978-2.536 9.236 2.247 15.968-3.405 15.968-9.457 0-5.812-5.701-10.007-12-10.007zm-5 11.5c-.829 0-1.5-.671-1.5-1.5s.671-1.5 1.5-1.5 1.5.671 1.5 1.5-.671 1.5-1.5 1.5zm5 0c-.829 0-1.5-.671-1.5-1.5s.671-1.5 1.5-1.5 1.5.671 1.5 1.5-.671 1.5-1.5 1.5zm5 0c-.828 0-1.5-.671-1.5-1.5s.672-1.5 1.5-1.5c.829 0 1.5.671 1.5 1.5s-.671 1.5-1.5 1.5z"/></svg>
@@ -217,7 +217,7 @@
                     </a>
                 </div>
                 <div class="contact_icon ig">
-                    <a href="https://www.instagram.com/pnu_linguistics/">
+                    <a href="https://www.instagram.com/pnu_linguistics/"; target="_blank">
                         <div>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>
@@ -226,7 +226,7 @@
                     </a>
                 </div>
                 <div class="contact_icon fb">
-                    <a href="https://www.facebook.com/pnulinguistics">
+                    <a href="https://www.facebook.com/pnulinguistics"; target="_blank">
                         <div>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-3 7h-1.924c-.615 0-1.076.252-1.076.889v1.111h3l-.238 3h-2.762v8h-3v-8h-2v-3h2v-1.923c0-2.022 1.064-3.077 3.461-3.077h2.539v3z"/></svg>
@@ -242,7 +242,7 @@
         <div class="footer1">
             <div class="footer_logo_container">
                 <div class="footer_logo">
-                    <img src="Logo.jpg">
+                    <img src="logo.jpg">
                 </div>
                 <div class="footer_logo_title">
                     <div>Leap Forwards</div>
@@ -260,19 +260,19 @@
                 <h1>CONTACT</h1>
                 <div class="footer_icons">
                     <div>
-                        <a href="https://pf.kakao.com/_xbxlXxcxl">
+                        <a href="https://pf.kakao.com/_xbxlXxcxl"; target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path d="M12 1c-6.338 0-12 4.226-12 10.007 0 2.05.739 4.063 2.047 5.625.055 1.83-1.023 4.456-1.993 6.368 2.602-.47 6.301-1.508 7.978-2.536 9.236 2.247 15.968-3.405 15.968-9.457 0-5.812-5.701-10.007-12-10.007zm-5 11.5c-.829 0-1.5-.671-1.5-1.5s.671-1.5 1.5-1.5 1.5.671 1.5 1.5-.671 1.5-1.5 1.5zm5 0c-.829 0-1.5-.671-1.5-1.5s.671-1.5 1.5-1.5 1.5.671 1.5 1.5-.671 1.5-1.5 1.5zm5 0c-.828 0-1.5-.671-1.5-1.5s.672-1.5 1.5-1.5c.829 0 1.5.671 1.5 1.5s-.671 1.5-1.5 1.5z"/></svg>
                         </a>
                     </div>
                     <div>
-                        <a href="https://www.instagram.com/pnu_linguistics/">
+                        <a href="https://www.instagram.com/pnu_linguistics/"; target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>
                         </a>
                     </div>
                     <div>
-                        <a href="https://www.facebook.com/pnulinguistics">
+                        <a href="https://www.facebook.com/pnulinguistics"; target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-3 7h-1.924c-.615 0-1.076.252-1.076.889v1.111h3l-.238 3h-2.762v8h-3v-8h-2v-3h2v-1.923c0-2.022 1.064-3.077 3.461-3.077h2.539v3z"/></svg>
                         </a>
@@ -282,9 +282,9 @@
             </div>
             <div class="footer_etc">
                 <div class="footer_policy">
-                    <div><a href="https://www.pusan.ac.kr/kor/CMS/Board/Board.do?mCode=MN186">개인정보처리방침</a></div>
-                    <div><a href="https://www.pusan.ac.kr/kor/CMS/Board/Board.do?mCode=MN186">저작권보호정책</a></div>
-                    <div><a href="https://www.pusan.ac.kr/kor/CMS/Board/Board.do?mCode=MN186">이메일무단수집거부</a></div>
+                    <div><a href="https://www.pusan.ac.kr/kor/CMS/Board/Board.do?mCode=MN186"; target="_blank">개인정보처리방침</a></div>
+                    <div><a href="https://www.pusan.ac.kr/kor/CMS/Board/Board.do?mCode=MN186"; target="_blank">저작권보호정책</a></div>
+                    <div><a href="https://www.pusan.ac.kr/kor/CMS/Board/Board.do?mCode=MN186"; target="_blank">이메일무단수집거부</a></div>
                 </div>
                 <h3>(46241) 부산광역시 금정구 부산대학로63번길 2 (장전동)</h3>
                 <h3>Copyright (C) PUSAN NATIONAL UNIVERSITY. All Rights Reserved.</h3>
@@ -293,10 +293,10 @@
     </footer>
 
     <footer class="fixed_footer">
-        <div><a href="https://www.pusan.ac.kr/">PNU</a></div>
-        <div><a href="https://plato.pusan.ac.kr/">PLATO</a></div>
-        <div><a href="https://e-onestop.pusan.ac.kr/">ONESTOP</a></div>
-        <div><a href="https://linguistics.pusan.ac.kr/">LINGUISTICS</a></div>    
+        <div><a href="https://www.pusan.ac.kr/"; target="_blank">PNU</a></div>
+        <div><a href="https://plato.pusan.ac.kr/"; target="_blank">PLATO</a></div>
+        <div><a href="https://e-onestop.pusan.ac.kr/"; target="_blank">ONESTOP</a></div>
+        <div><a href="https://linguistics.pusan.ac.kr/"; target="_blank">LINGUISTICS</a></div>    
     </footer>
 
     <script src="shared.js"></script>
