--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>부산대학교 언어정보학과 학생회</title>
-    <link rel="stylesheet" href="../shared.css">
-    <link rel="stylesheet" href="../pnu_linguistics/pnu_linguistics.css">
+    <link rel="stylesheet" href="shared.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
 
     <header>
         <div class="main_logo">
-            <a href="../index.html">
-            <img src="../pnu.jpg" id="header_logo">
+            <a href="index.html">
+            <img src="pnu.jpg" id="header_logo">
             <div id="header_logo_title">PNU LINGUISTICS</br>STUDENTS' ASSOCIATION</div>
             </a>
         </div>
@@ -35,7 +35,7 @@
             <div class="mobile_nav_item mobile_nav_about">
                 ABOUT
                 <div class="mobile_nav_item_sub mobile_sub1">
-                    <div><a href="../pnu_linguistics/index.html">언어정보학과</a></div>
+                    <div><a href="pnu_linguistics/index.html">언어정보학과</a></div>
                     <div><a href="#">언어정보학과 학생회</a></div>
                 </div>
             </div>
@@ -57,9 +57,184 @@
 
     <main>
         <section class="main_title">
-            <h1>About</h1>
-            <h2>언어정보학과 소개</h2>
-            <h3>PNU</br>LIN</br>GUIS</br>TICS</h3>
+            <h1 class="main_title1">
+                <div class="main_title-main">부산대학교</div>
+                <span class="main_title-sub">PNU</span>
+            </h1>
+            <h1 class="main_title2">
+                <div class="main_title-main">언어정보학과</div>
+                <span class="main_title-sub">LINGUISTICS</span>
+            </h1>
+            <h1 class="main_title3">
+                <div class="main_title-main">학생회</div>
+                <span class="main_title-sub">STUDENTS' ASSOCIATION</span>
+            </h1>
+        </section>
+
+        <section class="notice">
+            <h1 class="notice_title">Lastest Notice</h1>
+            <div class="notice_zone">
+                <div><img src="left_arrow.png" class="arrow"></div>
+                <div class="notice_image_container">
+                    <div><img src="notice.jpg" class="notice_image"></div>
+                </div>
+                <div><img src="right_arrow.png" class="arrow"></div>
+            </div>
+            <div class="more"><a href="#">자세히 알아보기</a></div>
+        </section>
+
+        <section class="year_of_association">
+            <h1 class="association_title">제 29대 언어정보학과 학생회</h1>
+            <div><img src="association_2021.jpg" id="association_image"></div>
+            <div class="more"><a href="#">자세히 알아보기</a></div>
+        </section>
+
+        <section class="association_slogan">
+            <div class="association_slogan_container association_slogan_container1">
+                <h1 class="association_slogan_title">One</h1>
+                <h2 class="association_slogan_sub">하나 되는 우리</h2>
+                <h3 class="association_slogan_spec">
+                        별 별 오면 노루, 패, 별들을 까닭입니다.</br>
+                        옥 별 불러 묻힌 비둘기, 풀이 이웃 까닭입니다.</br>
+                        잔디가 무성할 패, 벌써 위에 듯합니다.</br>
+                        소녀들의 걱정도 내 그리워,</br>
+                        겨울이 별 무성할 듯합니다.</br>
+                        봄이 노루, 강아지, 것은 같이 나는 까닭입니다.</br>
+                        어머니 그러나 이제 나는 별에도 듯합니다.</br>
+                        봄이 계집애들의 시와 별들을 봅니다.</br>
+                </h3>
+            </div>
+            <div>
+                <img src="friends.jpg" id="slogan_image">
+            </div>
+            <div class="association_slogan_container association_slogan_container2">
+                <h1 class="association_slogan_title">Together</h1>
+                <h2 class="association_slogan_sub">함께 하는 우리</h2>
+                <h3 class="association_slogan_spec">
+                    슬퍼하는 그리워 강아지, 하늘에는 다하지 쓸쓸함과 흙으로 듯합니다.</br>
+                    위에 언덕 했던 소학교 있습니다.</br>
+                    슬퍼하는 하나에 피어나듯 당신은 까닭입니다.</br>
+                    못 시와 차 이웃 이 추억과 있습니다.</br>
+                    이름을 까닭이요, 벌레는 가득 버리었습니다.</br>
+                    가을로 가득 라이너 피어나듯이 이 새워 오면 버리었습니다.</br>
+                    오는 비둘기, 계절이 있습니다.</br>
+                </h3>
+            </div>
+        </section>
+
+        <div class="main_slogan">
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M13 14.725c0-5.141 3.892-10.519 10-11.725l.984 2.126c-2.215.835-4.163 3.742-4.38 5.746 2.491.392 4.396 2.547 4.396 5.149 0 3.182-2.584 4.979-5.199 4.979-3.015 0-5.801-2.305-5.801-6.275zm-13 0c0-5.141 3.892-10.519 10-11.725l.984 2.126c-2.215.835-4.163 3.742-4.38 5.746 2.491.392 4.396 2.547 4.396 5.149 0 3.182-2.584 4.979-5.199 4.979-3.015 0-5.801-2.305-5.801-6.275z"/></svg>
+            </div>
+            <h1>Be the One Together</h1>
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M11 9.275c0 5.141-3.892 10.519-10 11.725l-.984-2.126c2.215-.835 4.163-3.742 4.38-5.746-2.491-.392-4.396-2.547-4.396-5.149 0-3.182 2.584-4.979 5.199-4.979 3.015 0 5.801 2.305 5.801 6.275zm13 0c0 5.141-3.892 10.519-10 11.725l-.984-2.126c2.215-.835 4.163-3.742 4.38-5.746-2.491-.392-4.396-2.547-4.396-5.149 0-3.182 2.584-4.979 5.199-4.979 3.015 0 5.801 2.305 5.801 6.275z"/></svg>
+            </div>
+        </div>
+        <div class="more"><a href="#">자세히 알아보기</a></div>
+
+        <section class="activity">
+            <div class="activity_container activity1">
+                <div class="activity_image_container">
+                    <img src="hands.jpg">
+                </div>
+                <div class="activity_info">
+                    <h1>Connection</h1>
+                    <h2>우리 학생회는 열려있습니다.</br>
+                        시험기간 지원, 선후배간 연결 등
+                        다양하고 새로운 접촉을 늘 시도합니다.
+                    </h2>
+                    <div class="activity_info_sub">
+                        <span>#open-minded</span>
+                        <span>#support<span>
+                        <span>#love</span>
+                    </div>
+                </div>
+            </div>
+            <div class="activity_container activity2">
+                <div class="activity_image_container">
+                    <img src="room.jpg">
+                </div>
+                <div class="activity_info">
+                    <h1>Own Space</h1>
+                    <h2>우리만의 공간이 존재합니다.</br>
+                        편안한 휴식, 집중적 공부 및 과제,
+                        혹은 개인의 물품 보관까지 가능합니다.
+                    </h2>
+                    <div class="activity_info_sub">
+                        <span>#exclusive</span>
+                        <span>#comfort</span>
+                        <span>#safety</span>
+                    </div>
+                </div>
+            </div>
+            <div class="activity_container activity3">
+                <div class="activity_image_container">
+                    <img src="beach.jpg">
+                </div>
+                <div class="activity_info">
+                    <h1>Events</h1>
+                    <h2>다양한 이벤트를 즐길 수 있습니다.</br>
+                        축제, 단합회, 체육회 등등
+                        매년 모두가 즐길 수 있게 됩니다.
+                    </h2>
+                    <div class="activity_info_sub">
+                        <span>#joyful</span>
+                        <span>#variety</span>
+                        <span>#friends</span>
+                    </div>
+                </div>
+            </div>
+            <div class="main_slogan">
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M13 14.725c0-5.141 3.892-10.519 10-11.725l.984 2.126c-2.215.835-4.163 3.742-4.38 5.746 2.491.392 4.396 2.547 4.396 5.149 0 3.182-2.584 4.979-5.199 4.979-3.015 0-5.801-2.305-5.801-6.275zm-13 0c0-5.141 3.892-10.519 10-11.725l.984 2.126c-2.215.835-4.163 3.742-4.38 5.746 2.491.392 4.396 2.547 4.396 5.149 0 3.182-2.584 4.979-5.199 4.979-3.015 0-5.801-2.305-5.801-6.275z"/></svg>
+                </div>
+                <h1>Be the One Together</h1>
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M11 9.275c0 5.141-3.892 10.519-10 11.725l-.984-2.126c2.215-.835 4.163-3.742 4.38-5.746-2.491-.392-4.396-2.547-4.396-5.149 0-3.182 2.584-4.979 5.199-4.979 3.015 0 5.801 2.305 5.801 6.275zm13 0c0 5.141-3.892 10.519-10 11.725l-.984-2.126c2.215-.835 4.163-3.742 4.38-5.746-2.491-.392-4.396-2.547-4.396-5.149 0-3.182 2.584-4.979 5.199-4.979 3.015 0 5.801 2.305 5.801 6.275z"/></svg>
+                </div>
+            </div>
+            <div class="more"><a href="#">자세히 알아보기</a></div>
+        </section>
+
+        <section class="contact">
+            <h1>Our Social Media</h1>
+            <h2>다양한 방법으로 소통할 수 있어요!</h2>
+            <h2>최신의 업데이트를 바로 확인할 수 있어요.</h2>
+            <h2>궁금한 점들에 대한 해결을 주저말아 주세요 :)</h2>
+            <div class="contact_icons">
+                <div class="contact_icon kt">
+                    <a href="https://pf.kakao.com/_xbxlXxcxl"; target="_blank">
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path d="M12 1c-6.338 0-12 4.226-12 10.007 0 2.05.739 4.063 2.047 5.625.055 1.83-1.023 4.456-1.993 6.368 2.602-.47 6.301-1.508 7.978-2.536 9.236 2.247 15.968-3.405 15.968-9.457 0-5.812-5.701-10.007-12-10.007zm-5 11.5c-.829 0-1.5-.671-1.5-1.5s.671-1.5 1.5-1.5 1.5.671 1.5 1.5-.671 1.5-1.5 1.5zm5 0c-.829 0-1.5-.671-1.5-1.5s.671-1.5 1.5-1.5 1.5.671 1.5 1.5-.671 1.5-1.5 1.5zm5 0c-.828 0-1.5-.671-1.5-1.5s.672-1.5 1.5-1.5c.829 0 1.5.671 1.5 1.5s-.671 1.5-1.5 1.5z"/></svg>
+                        </div>
+                        <div class="contact_icon_name">카카오톡</div>
+                    </a>
+                </div>
+                <div class="contact_icon ig">
+                    <a href="https://www.instagram.com/pnu_linguistics/"; target="_blank">
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>
+                        </div>
+                        <div class="contact_icon_name">인스타그램</div>
+                    </a>
+                </div>
+                <div class="contact_icon fb">
+                    <a href="https://www.facebook.com/pnulinguistics"; target="_blank">
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-3 7h-1.924c-.615 0-1.076.252-1.076.889v1.111h3l-.238 3h-2.762v8h-3v-8h-2v-3h2v-1.923c0-2.022 1.064-3.077 3.461-3.077h2.539v3z"/></svg>
+                        </div>
+                        <div class="contact_icon_name">페이스북</div>
+                    </a>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -67,7 +242,7 @@
         <div class="footer1">
             <div class="footer_logo_container">
                 <div class="footer_logo">
-                    <img src="../logo.jpg">
+                    <img src="logo.jpg">
                 </div>
                 <div class="footer_logo_title">
                     <div>Leap Forwards</div>
@@ -124,7 +299,7 @@
         <div><a href="https://linguistics.pusan.ac.kr/"; target="_blank">LINGUISTICS</a></div>    
     </footer>
 
-    <script src="../shared.js"></script>
+    <script src="shared.js"></script>
 
 </body>
 </html>
