--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <nav class="mobile_nav">
         <div class="mobile_nav_items">
-            <div class="mobile_nav_item mobile_nav_about">
+            <div class="mobile_nav_item mobile_nav_about" onclick="">
                 ABOUT
                 <div class="mobile_nav_item_sub mobile_sub1">
                     <div><a href="pnu_linguistics/index.html">언어정보학과</a></div>
@@ -42,7 +42,7 @@
             <div class="mobile_nav_item mobile_nav_notice">
                 <a href="#">NOTICE</a>
             </div>
-            <div class="mobile_nav_item mobile_nav_community">
+            <div class="mobile_nav_item mobile_nav_community" onclick="">
                 COMMUNITY
                 <div class="mobile_nav_item_sub mobile_sub2">
                     <div><a href="#">활동게시판</a></div>
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="mobile_nav_item mobile_nav_contact">
-                <a href="#">CONTACT</a>
+                <a href="contact/index.html">CONTACT</a>
             </div>
         </div>
     </nav>
