--- a/contact/index.html
+++ b/contact/index.html
@@ -17,16 +17,24 @@
             <div id="header_logo_title">PNU LINGUISTICS</br>STUDENTS' ASSOCIATION</div>
             </a>
         </div>
-        <div class="main_menu">
+        <div class="main_menu_bar">
+            <div class="main_link">
+                <div><a href="https://www.pusan.ac.kr/"; target="_blank">PNU</a></div>
+                <div><a href="https://plato.pusan.ac.kr/"; target="_blank">PLATO</a></div>
+                <div><a href="https://e-onestop.pusan.ac.kr/"; target="_blank">ONESTOP</a></div>
+                <div><a href="https://linguistics.pusan.ac.kr/"; target="_blank">LINGUISTICS</a></div>
+            </div>
+            <div class="main_menu">
                 <div id="login_icon"><a href="#">
-                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-                    <path d="M12 0c-5.083 0-8.465 4.949-3.733 13.678 1.596 2.945-1.725 3.641-5.09 4.418-3.073.709-3.187 2.235-3.177 4.904l.004 1h23.99l.004-.969c.012-2.688-.093-4.223-3.177-4.935-3.438-.794-6.639-1.49-5.09-4.418 4.719-8.912 1.251-13.678-3.731-13.678m0 1c1.89 0 3.39.764 4.225 2.15 1.354 2.251.866 5.824-1.377 10.06-.577 1.092-.673 2.078-.283 2.932.937 2.049 4.758 2.632 6.032 2.928 2.303.534 2.412 1.313 2.401 3.93h-21.998c-.01-2.615.09-3.396 2.401-3.93 1.157-.266 5.138-.919 6.049-2.94.387-.858.284-1.843-.304-2.929-2.231-4.115-2.744-7.764-1.405-10.012.84-1.412 2.353-2.189 4.259-2.189"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path d="M20.822 18.096c-3.439-.794-6.64-1.49-5.09-4.418 4.72-8.912 1.251-13.678-3.732-13.678-5.082 0-8.464 4.949-3.732 13.678 1.597 2.945-1.725 3.641-5.09 4.418-3.073.71-3.188 2.236-3.178 4.904l.004 1h23.99l.004-.969c.012-2.688-.092-4.222-3.176-4.935z"/></svg>
                 </a></div>
-            <button class="burgerbar">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
+                <button class="burgerbar">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
         </div>
     </header>
 
@@ -57,9 +65,12 @@
 
     <main>
         
+        <section class="contact_back">
+            <div></div>
+        </section>
+
         <section class="contact_main">
-            <span id="blank"></span>
-            <h1>CONTACT</h1>
+            <h1>CONTACT US</h1>
             <span></span>
             <h2>다양한 방법으로 접촉할 수 있어요.</h2>
             <h2>우리는 열려있는 언어정보학과 학생회</h2>
@@ -78,7 +89,7 @@
             <h1>Social Media</h1>
             <span></span>
             <h2>가장 편리하고 직관적인 소통 방식이에요!</h2>
-            <div>
+            <div class="contact_sns_container">
                 <div class="contact_sns_info">
                     <div class="contact_sns_icon kt">
                         <a href="https://pf.kakao.com/_xbxlXxcxl"; target="_blank">
@@ -87,9 +98,9 @@
                         </a>
                     </div>
                     <div><h4>카카오톡</h4></div>
-                </div>
-                <div>
-                    <h3>가장 대중적인 소통 수단인 카카오톡으로 소통할 수 있는 가장 부담없는 접근이에요.</h3>
+                    <div>
+                        <h3>가장 대중적인 소통 수단인 카카오톡으로 소통할 수 있는 가장 부담없는 접근이에요.</h3>
+                    </div>
                 </div>
                 <div class="contact_sns_info">
                     <div class="contact_sns_icon ig">
@@ -99,9 +110,9 @@
                         </a>
                     </div>
                     <div><h4>인스타그램</h4></div>
-                </div>
-                <div>
-                    <h3>다양성이 넘치는 피드를 구경하면서 생기는 궁금한 점들에 대해 언제든 DM을 보내주세요.</h3>
+                    <div>
+                        <h3>다양성이 넘치는 피드를 구경하면서 생기는 궁금한 점들에 대해 언제든 DM을 보내주세요.</h3>
+                    </div>
                 </div>
                 <div class="contact_sns_info fb">
                     <div class="contact_sns_icon">
@@ -111,9 +122,9 @@
                         </a>
                     </div>
                     <div><h4>페이스북</h4></div>
-                </div>
-                <div>
-                    <h3>가장 꾸준히 이어져오는 소통 방식으로, 10년 전 언어정보학과의 모습도 확인할 수 있어요.</h3>
+                    <div>
+                        <h3>가장 꾸준히 이어져오는 소통 방식으로, 10년 전 언어정보학과의 모습도 확인할 수 있어요.</h3>
+                    </div>
                 </div>
             </div>
         </section>
