--- a/pnu_linguistics/index.html
+++ b/pnu_linguistics/index.html
@@ -17,16 +17,24 @@
             <div id="header_logo_title">PNU LINGUISTICS</br>STUDENTS' ASSOCIATION</div>
             </a>
         </div>
-        <div class="main_menu">
+        <div class="main_menu_bar">
+            <div class="main_link">
+                <div><a href="https://www.pusan.ac.kr/"; target="_blank">PNU</a></div>
+                <div><a href="https://plato.pusan.ac.kr/"; target="_blank">PLATO</a></div>
+                <div><a href="https://e-onestop.pusan.ac.kr/"; target="_blank">ONESTOP</a></div>
+                <div><a href="https://linguistics.pusan.ac.kr/"; target="_blank">LINGUISTICS</a></div>
+            </div>
+            <div class="main_menu">
                 <div id="login_icon"><a href="#">
-                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-                    <path d="M12 0c-5.083 0-8.465 4.949-3.733 13.678 1.596 2.945-1.725 3.641-5.09 4.418-3.073.709-3.187 2.235-3.177 4.904l.004 1h23.99l.004-.969c.012-2.688-.093-4.223-3.177-4.935-3.438-.794-6.639-1.49-5.09-4.418 4.719-8.912 1.251-13.678-3.731-13.678m0 1c1.89 0 3.39.764 4.225 2.15 1.354 2.251.866 5.824-1.377 10.06-.577 1.092-.673 2.078-.283 2.932.937 2.049 4.758 2.632 6.032 2.928 2.303.534 2.412 1.313 2.401 3.93h-21.998c-.01-2.615.09-3.396 2.401-3.93 1.157-.266 5.138-.919 6.049-2.94.387-.858.284-1.843-.304-2.929-2.231-4.115-2.744-7.764-1.405-10.012.84-1.412 2.353-2.189 4.259-2.189"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path d="M20.822 18.096c-3.439-.794-6.64-1.49-5.09-4.418 4.72-8.912 1.251-13.678-3.732-13.678-5.082 0-8.464 4.949-3.732 13.678 1.597 2.945-1.725 3.641-5.09 4.418-3.073.71-3.188 2.236-3.178 4.904l.004 1h23.99l.004-.969c.012-2.688-.092-4.222-3.176-4.935z"/></svg>
                 </a></div>
-            <button class="burgerbar">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
+                <button class="burgerbar">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
         </div>
     </header>
 
@@ -102,7 +110,7 @@
                         <h1>권연진</h1>
                         <h2>직급 : 교수(학과장)</h2>
                         <h2>세부전공 : 의미론</h2>
-                        <h3>" 신념이 있는 한 어딘가에 기회는 있다. "</h3>
+                        <h3>"신념이 있는 한 어딘가에 기회는 있다."</h3>
                     </div>
                 </div>
                 <div class="linguistics_professor">
@@ -113,7 +121,7 @@
                         <h1>권순복</h1>
                         <h2>직급 : 교수</h2>
                         <h2>세부전공 : 언어병리학 / 의공학</h2>
-                        <h3>" 인간의 마음가짐이 곧 행복이다. "</h3>
+                        <h3>"인간의 마음가짐이 곧 행복이다."</h3>
                     </div>
                 </div>
                 <div class="linguistics_professor">
@@ -124,7 +132,7 @@
                         <h1>김태호</h1>
                         <h2>직급 : 교수</h2>
                         <h2>세부전공 : 응용언어학</h2>
-                        <h3>" If you can't avoid it, enjoy it. "</h3>
+                        <h3>"If you can't avoid it, enjoy it."</h3>
                     </div>
                 </div>
                 <div class="linguistics_professor">
@@ -135,7 +143,7 @@
                         <h1>강은지</h1>
                         <h2>직급 : 조교수</h2>
                         <h2>세부전공 : 역사비교언어학</h2>
-                        <h3>" 나만이 내 행복을 지킬 수 있다. "</h3>
+                        <h3>"나만이 내 행복을 지킬 수 있다."</h3>
                     </div>
                 </div>
                 <div class="linguistics_professor">
@@ -146,7 +154,7 @@
                         <h1>서민정</h1>
                         <h2>직급 : 조교수</h2>
                         <h2>세부전공 : 통사론</h2>
-                        <h3>" 시간 엄수는 군주의 예절이다. "</h3>
+                        <h3>"시간 엄수는 군주의 예절이다."</h3>
                     </div>
                 </div>
             </div>
