--- a/pnu_linguistics/index.html
+++ b/pnu_linguistics/index.html
@@ -70,7 +70,8 @@
                 <h2>언어정보학과 소개</h2>
             </div>
             <div class="main_title_lower">
-                <h3>PNU</br>LIN</br>GUIS</br>TICS</h3>
+                <h3 id="main_title_mobile">PNU</br>LIN</br>GUIS</br>TICS</h3>
+                <h3 id="main_title_pc">PNU</br>LINGUISTICS</h3>
             </div>
         </section>
 
@@ -78,7 +79,8 @@
             <h1 class="linguistics_info_title">PNU Linguistics</h1>
             <h2 class="linguistics_info_subtitle">언어정보학과란</h2>
             <h3>
-                본 학과는 1992년 신설된 학과로서, 2001년 학과명칭을 '언어정보학과'로 학과 명칭과 교과과정을 개정함으로써,
+                본 학과는 인간 언어에 대한 통찰과 분석을 통해 인간 본질에 다가가고자 하는 목적에서 1992년 신설된 학과로서,
+                2001년 학과명칭을 '언어정보학과'로 학과 명칭과 교과과정을 개정함으로써
                 21세기 정보화사회에 필요한 인재양성의 터전으로 거듭나고 있습니다.
                 또한 1999년에는 대학원 석사과정이 신설되고 2009년에는 대학원 박사과정이 신설되어 깊이 있는 학문 탐구의 터전이 되고 있습니다.
             </h3>
