--- a/index.html
+++ b/index.html
@@ -120,15 +120,11 @@
                     <h1>제 29대 언어정보학과 학생회</h1>
                     <h2>너나들이</h2>
                     <div class="association_info_ppl">
-                        <div>
-                            <h3>회장 안재현</h3>
-                            <h3>부회장 이서영</h3>
-                        </div>
-                        <div>
-                            <h3>2학년대표 오고은</h3>
-                            <h3>3학년대표 이상민</h3>
-                            <h3>4학년대표 김찬혁</h3>
-                        </div>
+                        <h3>회장 안재현</h3>
+                        <h3>부회장 이서영</h3>
+                        <h3>2학년대표 오고은</h3>
+                        <h3>3학년대표 이상민</h3>
+                        <h3>4학년대표 김찬혁</h3>
                     </div>
                 </div>
             </div>
@@ -178,7 +174,7 @@
                 <path d="M11 9.275c0 5.141-3.892 10.519-10 11.725l-.984-2.126c2.215-.835 4.163-3.742 4.38-5.746-2.491-.392-4.396-2.547-4.396-5.149 0-3.182 2.584-4.979 5.199-4.979 3.015 0 5.801 2.305 5.801 6.275zm13 0c0 5.141-3.892 10.519-10 11.725l-.984-2.126c2.215-.835 4.163-3.742 4.38-5.746-2.491-.392-4.396-2.547-4.396-5.149 0-3.182 2.584-4.979 5.199-4.979 3.015 0 5.801 2.305 5.801 6.275z"/></svg>
             </div>
         </div>
-        <div class="more"><a href="#">자세히 알아보기</a></div>
+        <div class="more"><a href="#">학생회 자세히 알아보기</a></div>
 
         <section class="activity">
             <div class="activity_container activity1">
@@ -243,7 +239,7 @@
                     <path d="M11 9.275c0 5.141-3.892 10.519-10 11.725l-.984-2.126c2.215-.835 4.163-3.742 4.38-5.746-2.491-.392-4.396-2.547-4.396-5.149 0-3.182 2.584-4.979 5.199-4.979 3.015 0 5.801 2.305 5.801 6.275zm13 0c0 5.141-3.892 10.519-10 11.725l-.984-2.126c2.215-.835 4.163-3.742 4.38-5.746-2.491-.392-4.396-2.547-4.396-5.149 0-3.182 2.584-4.979 5.199-4.979 3.015 0 5.801 2.305 5.801 6.275z"/></svg>
                 </div>
             </div>
-            <div class="more"><a href="#">자세히 알아보기</a></div>
+            <div class="more"><a href="#">활동 자세히 알아보기</a></div>
         </section>
 
         <section class="contact">
